--- a/style.css
+++ b/style.css
@@ -27,7 +27,7 @@
 
 .card-pos {
   width: 500px;
-  height: 550px;
+  height: 600px;
   margin: 25px;
   background-color: #f2f2f2;
   border: 1px solid #ccc;
@@ -46,7 +46,7 @@
 
 .card-pos-right {
   width: 500px;
-  height: 550px;
+  height: 600px;
   margin: 25px;
   background-color: #34ebe5;
   border: 2px solid #000;
@@ -134,10 +134,15 @@ h2 {
 
 .bill-amount [type="number"] {
   width: 100%;
+  margin: 0;
+  padding: 0;
 }
 
 .bill-amount {
   width: 450px;
+  margin: 0;
+  padding: 0;
+  height: 130px;
 }
 h1 {
   display: flex;
@@ -150,6 +155,8 @@ h1 {
   height: 50px;
   font-size: 25px;
   text-align: right;
+  margin: 0;
+  padding: 0;
 }
 
 .container-resum {
@@ -207,4 +214,21 @@ hr{
   border-radius: 10px;
    background-color:#eb3477;
   border: 2px solid #fff;
+}
+
+.shop-icon {
+  position: relative;
+  right: -20px;
+  top: -48px;
+  margin: 0;
+  
+}
+
+
+.people-icon {
+  position: relative;
+  right: -20px;
+  top: -48px;
+  margin: 0;
+
 }
