--- a/style.css
+++ b/style.css
@@ -192,7 +192,7 @@ hr {
 .reset-input-btn [type="button"] {
   width: 460px;
   height: 50px;
-  margin-top: 109px;
+  margin-top: 108px;
   font-size: 25px;
   color: #000;
   border-radius: 10px;
@@ -264,3 +264,159 @@ hr {
 	top: 0;
 }
 	
+@media only screen and (max-width: 600px) {
+  .container-pos {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    width: 380px;
+    height: auto;
+  
+    border: 1px solid #ccc;
+    border-radius: 5px;
+    align-items: center;
+    align-content: center;
+    align-self: center;
+    flex-wrap: wrap;
+    gap: 10px;
+    background-color: #f1f5e4;
+  }
+  
+  .card-pos {
+    width: 300px;
+    height: 600px;
+    margin: 25px;
+    background-color: #f2f2f2;
+    border: 1px solid #ccc;
+    border-radius: 5px;
+    display: flex;
+    flex-wrap: wrap;
+    align-items: start;
+    justify-content: start;
+    flex-direction: column;
+    font-size: 24px;
+    font-weight: bold;
+    cursor: pointer;
+    padding: 15px;
+  }
+  
+  
+  .card-pos-right {
+    width: 300px;
+    height: 600px;
+    margin: 25px;
+    background-color: #34ebe5;
+    border: 2px solid #000;
+    border-radius: 5px;
+    display: flex;
+    flex-wrap: wrap;
+    align-items: center;
+    align-self: center;
+    align-content: center;
+    justify-content: space-between;
+    flex-direction: column;
+    font-size: 24px;
+    font-weight: bold;
+    cursor: pointer;
+    padding: 15px;
+  
+  }
+  
+.container-resum {
+  display: flex;
+  justify-content: space-between;
+  width: 300px;
+}
+
+.card-pos-right [type="button"] {
+  width: 300px;
+  height: 50px;
+  font-size: 25px;
+  color: #000;
+  border-radius: 10px;
+
+}
+hr {
+  position: relative;
+  border: 1px solid #000;
+  width: 300px;
+}
+
+.reset-input-btn [type="button"] {
+  width: 300px;
+  height: 50px;
+  margin-top: 108px;
+  font-size: 25px;
+  color: #000;
+  border-radius: 10px;
+}
+
+
+.bill-amount {
+  width: 300px;
+  margin: 0;
+  padding: 0;
+  height: 130px;
+}
+
+.tips-amount-card {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: start;
+  gap: 10px;
+}
+
+.tips-amount-card [type="button"] {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: start;
+  width: calc(33.3% - 10px);
+  height: 50px;
+  gap: 10px;
+  font-size: 25px;
+  background-color: #34ebe5;
+  border-radius: 10px;
+}
+
+.tips-amount-card [type="button"]:hover {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: start;
+  width: calc(33.3% - 10px);
+  height: 50px;
+  gap: 20px;
+  font-size: 25px;
+  background-color: #34eb74;
+}
+
+.tips-amount-card [type="button"].active {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: start;
+  width: calc(33.3% - 10px);
+  height: 50px;
+  gap: 20px;
+  font-size: 25px;
+  background-color: #34eb74;
+  border: 2px solid #eb3477;
+}
+
+.tips-amount-card [type="number"] {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+  width: calc(33.3% - 10px);
+  height: 45px;
+  gap: 20px;
+  font-size: 25px;
+  align-self: center;
+  border-radius: 10px;
+}
+
+h1 {
+  display: flex;
+  justify-content: center;
+  font-size: 40px;
+  margin: 0 auto;
+}
+}
