--- a/style.css
+++ b/style.css
@@ -419,4 +419,26 @@ h1 {
   font-size: 40px;
   margin: 0 auto;
 }
+.card-pos-right [type="button"]:hover,
+.card-pos-right [type="button"]:active,
+.card-pos-right [type="button"]:focus {
+  width: 300px;
+  height: 50px;
+  font-size: 25px;
+  color: #000;
+  border-radius: 10px;
+  background-color: #eb3477;
+  border: 2px solid #fff;
+}
+.reset-input-btn [type="button"]:hover,
+.reset-input-btn [type="button"]:active {
+  width: 300px;
+  height: 50px;
+  margin-top: 109px;
+  font-size: 25px;
+  color: #000;
+  border-radius: 10px;
+  background-color: #34ebe5;
+}
+
 }
