--- a/style.css
+++ b/style.css
@@ -440,5 +440,13 @@ h1 {
   border-radius: 10px;
   background-color: #34ebe5;
 }
+.reset-input-btn [type="button"] {
+  width: 300px;
+  height: 50px;
+  margin-top: 108px;
+  font-size: 25px;
+  color: #000;
+  border-radius: 10px;
+}
 
 }
